--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avalon-react-client",
+  "name": "avalon-react-client-2",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
