--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avalon-react-client-2",
+  "name": "avalon-react-client",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -8,6 +8,7 @@
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-hook-form": "5.7.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.0.1"
   },
